Fix mobile menu not covering the screen

--- a/web/src/components/Common/MobileMenu.scss
+++ b/web/src/components/Common/MobileMenu.scss
@@ -22,7 +22,7 @@
 @import '../App/font';
 
 .wrapper {
-  position: absolute;
+  position: fixed;
   top: 0;
   bottom: $footer-height;
   left: 0;
